<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    >
    <TextView
        android:id="@+id/registerTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        />
    <EditText
        android:id="@+id/emailBox"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/passwordBox"
        android:layout_margin="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/confirmPasswordBox"
        android:layout_margin="15dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/passwordRequirements"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/password_requirements"
        />

    <Button
        android:id="@+id/createAccountButton"
        android:text="@string/create_account"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/signInRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/already_user"
        android:layout_margin="15dp"/>
</LinearLayout>