<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs4530.domaspiragas.assignment3.PlayScreenActivity">

    <ListView
        android:id="@+id/gameList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray">
    </ListView>
    <LinearLayout
        android:id="@+id/upperButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8">
        <Button
            android:id="@+id/newButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/new_game"
           />
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_game"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lowerButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8">
        <Button
            android:id="@+id/joinButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/join_game" />
        <Button
            android:id="@+id/watchButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/watch_game"
            />
    </LinearLayout>
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:text="@string/logout"/>
</LinearLayout>
