<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    >
    <TextView
        android:id="@+id/loginTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        />
    <EditText
        android:id="@+id/emailBox"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/passwordBox"
        android:layout_margin="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/signInButton"
        android:text="@string/sign_in"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/registerRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/not_user"
        android:layout_margin="15dp"/>
</LinearLayout>