<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    >
    <TextView
        android:id="@+id/verificationTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        />
    <TextView
        android:id="@+id/verificationSubtitle"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        />
    <Button
        android:id="@+id/sendVerificationButton"
        android:text="@string/send_verification"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/haveVerifiedButton"
        android:text="@string/already_verified"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/logoutButton"
        android:text="@string/logout"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>